FitTrip/css/fitTrip_2022.css
@charset "UTF-8";

/* CSS Document */
/*============== Banner ==============*/

#banner {
  margin-top: 110px;
  position: relative;
  text-align: center;
}

.banner-title {
  position: absolute;
  color: #fff;
  font-size: 48px;
  font-weight: 900;
  text-shadow: 0 0 15px #1a1a1a;
  top: 50%;
  left: 50%;
  margin-right: -50%;
  transform: translate(-50%, -50%)
}

#banner img {
  height: inherit;
}

@media (max-width: 1400px) {
  #banner {
    height: 600px;
  }
}

@media (max-width: 768px) {
  #banner {
    margin-top: unset;
    height: 500px;
  }
}

/*============== /Banner ==============*/

/*============== content ==============*/
#content {
  margin: 30px 0 0;
  font-family: "Noto Sans TC";
}

#fit_content {
  display: flex;
  width: 100%;
  max-width: 1350px;
  margin: 0 auto 50px;
  flex-wrap: wrap;
}

@media (max-width: 1400px) {
  #fit_content {
    width: 90vw
  }
}

@media (max-width: 768px) {
  #content {
    margin-top: 16px;
  }
}

/*============== /content ==============*/

/*============== AirTicket ==============*/

#fit_AirTicket {
  max-width: 712px;
  margin: 20px auto;
}


.AirTicket-nav-tab {
  position: relative;
  width: 712px;
}

.AirTicket-tab {
  position: absolute;
  top: 14px;
  right: 20px;
  z-index: 1;
  display: flex;
}

.tabs-wrapper ul li {
  display: inline-block;
  margin: 0 4px;
}

.tabs-wrapper ul li a {
  background: #e1e1e1;
  color: #464646;
  padding: 10px 20px;
  font-size: 18px;
}

.tabs-wrapper ul li.selected a {
  background: #e9746b;
  color: white;
  text-shadow: 0 0 1px #e9746b;
}

.iframe-container iframe {
  width: 712px;
  height: 412px;
}

@media (max-width: 768px) {
  #fit_AirTicket {
    width: 100%;
  }

  .tabs-wrapper {
    overflow-x: auto;
  }
}

/*============== /AirTicket ==============*/

/*============== fit_slider ==============*/
#fit_slider {
  width: 100%;
  margin: 20px auto;
  max-width: 592px;
}

.ad {
  display: block;
  background-color: #8c001a;
  color: #fff;
  text-align: center;
}

.ad img {
  width: 100%;
}

@media (max-width: 768px) {
  #fit_slider {
    width: 100%;
  }

  .ad img {
    width: 100%;
  }
}


/*============== /fit_slider ==============*/

/*============== fit_globalTravel ==============*/

.fit_globalTravel {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  margin: 20px 0;
  padding: 10px;
  box-shadow: 0 0 5px #757575;
}

.globalTravel_title {
  text-align: center;
  margin: 0 auto;
  padding: 0 20px;
}

.globalTravel_title div {
  padding: 10px 0;
  font-weight: 700;
}

.icon-size {
  width: 36px;
  margin: 0 auto;
  padding: 5px 0;
}

.globalTravel_popular {
  font-size: 1.6rem;
}

.globalTravel_line {
  display: block;
  background-color: #ff6501;
  width: 30px;
  height: 2px;
  margin: 0 auto;
}

.globalTravel_go {
  color: #ff6501;
  font-size: 1.4rem;
}

.globalTravel_content {
  display: flex;
  width: 1100px;
  margin: 0 auto;
}

.globalTravel_content ul {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin: 0 auto;
  justify-content: center;
  overflow-x: auto;
}

.globalTravel_content li {
  margin: 10px;
}

.globalTravel_content li a {
  position: relative;
}

.glabalTravel_img {}

.glabalTravel_img img {
  width: 200px;
  height: 150px;
  object-fit: cover;
  border-bottom: #8c001a 10px solid;
}

.globalTravel_top10 {
  position: absolute;
  bottom: 20px;
  left: 10px;
  color: #fff;
  font-weight: 500;
}

.globalTravel_price {
  font-size: 0.5rem;
  padding: 5px;
}

.price {
  padding-left: 3px;
  font-size: 1rem;
}

@media (max-width: 1400px) {
  .globalTravel_content {
    display: contents;
  }

  .globalTravel_content ul {
    flex-wrap: nowrap;
    justify-content: unset;
  }
}

/*============== /fit_globalTravel ==============*/

/*============== packages ==============*/

#packages {
  padding: 20px 0;
  margin: 20px auto;
}

.packages-nav-tab {
  display: flex;
  flex-wrap: wrap;
}

.main-title {
  display: flex;
  font-size: 1.7rem;
  color: #494949;
  width: max-content;
  padding: 0 10px;
}

.icon-size2 {
  width: 40px;
}

.icon-size2 img {
  transform: rotateY(180deg);
}

.main-title span {
  margin-left: 10px;
}


.packages-nav-tab-hidden {
  width: max-content;
  height: 46px;
  align-self: center;
  overflow-x: auto;
  margin-top: 5px;
}

@media (max-width: 768px) {
  .main-title {
    margin: 20px auto;
  }
}

.packages-tab {
  display: flex;
  list-style: none;
  padding: 0;
  width: max-content;
}

.packages-tab li {
  cursor: pointer;
  position: relative;
  display: inline-block;
  margin: 0 1rem;
  font-weight: bold;
  font-size: 1.2rem;
}

.packages-tab li::after {
  position: absolute;
  content: "";
  top: 34px;
  left: 0;
  width: 100%;
  border-bottom: #8c001a 5px solid;
  transform: scaleX(0);
  transition: 0.4s;
}

.packages-tab li a {
  position: relative;
  display: flex;
  width: 100%;
  text-decoration: none;
  font-family: "Noto Sans TC";
  color: #757575;
  transition: 0.4s;
}

.packages-tab li.selected a,
.packages-tab li a:hover {
  color: #8c001a;
  font-family: "Noto Sans TC";
}

.packages-tab li.selected a::after {
  content: "";
  position: absolute;
  top: 34px;
  left: 0;
  width: 100.5%;
  border-bottom: 5px solid #8c001a;
}

.packages-tab li:hover::after,
.packages-tab li.active::after {
  content: "";
  transform: scaleX(1);
}


/* 以上是border動畫 */

.packages-nav-tab>div>div {
  display: none;
}

.packages-nav-tab>div>div.active {
  display: block;
  position: relative;
}

.packages-area {
  margin-top: -7px;
  padding-top: 20px;
  border-top: #c1c1c1 1px solid;
  overflow: auto;
}

.packages-hidden {
  overflow-x: auto;
}

.packages-tool {
  display: flex;
  /*    flex-wrap: wrap;*/
}

@media (max-width: 1000px) {
  #packages .main-title {
    border: none;
  }

  .packages-tool {
    min-width: 1000px;
    overflow: auto;
  }
}

figure.packages-box {
  width: calc((100% - 40px) / 3);
  margin: 10px;
  line-height: 0;
  overflow: hidden;
  color: #fff;
  position: relative;
  box-shadow: 0 0 5px #757575;
}

figure.packages-box:last-of-type {
  margin-right: 0;
}

figure.packages-box img {
  width: 100%;
  transition: 0.5s;
  position: relative;
  z-index: -1;
}

figure.packages-box:hover img {
  transform: scale(1.1);
  -webkit-filter: brightness(.5);
}

figure.packages-box figcaption {
  background: #fff;
  border: #aaaaaa 1px solid;
  border-top: unset;
}

figure.packages-box p {
  color: #000;
  font-size: 1.1rem;
  font-weight: bolder;
  padding: 15px 20px 0;
  margin: 0;
  line-height: 21px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

figure.packages-box p.card-price {
  padding: 15px 20px;
  font-size: 1rem;
  font-weight: bolder;
  text-align: end;
  color: #df0000;
}

figure.packages-box p.card-price span {
  color: #000;
  font-size: 0.7rem;
}

figure.packages-box a {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
}


/*============== /packages ==============*/



/*==============  ==============*/

